2006-03-28  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:
	* lib/egg/egg-editable-toolbar.c: (egg_editable_toolbar_set_fixed):
	* lib/widgets/ephy-location-entry.c: (ephy_location_entry_init):
	* lib/widgets/ephy-zoom-control.c: (ephy_zoom_control_init):
	* src/ephy-fullscreen-popup.c: (ephy_fullscreen_popup_constructor):
	* src/ephy-notebook.c: (ephy_notebook_init):
	* src/ephy-statusbar.c: (ephy_statusbar_init):

	Use g_object_ref_sink().

2006-03-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad).

	Mozilla backend now supports adblock.
	Fix #335919.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-node.c: (write_parent), (ephy_node_write_to_xml):

	Fix print format/arg mismatch.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/ephy-main.c: (main):

	Drop compat code for libgnome < 2.14.
	Fix refcount leak.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c: (show_status_icon),
	(downloader_view_init), (downloader_view_finalize),
	(update_status_icon), (download_changed_cb),
	(downloader_view_add_download), (downloader_view_remove_download),
	(download_dialog_delete_event_cb):

	Remove #ifdef:s now that we depend on gtk+ 2.9.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/ui/epiphany-ui.xml:
	* src/ephy-lockdown.c: (update_window):
	* src/ephy-notebook.c: (ephy_notebook_class_init),
	(button_press_cb), (ephy_notebook_init),
	(tab_label_weak_notify_cb), (build_tab_label):
	* src/ephy-notebook.h:
	* src/ephy-session.c: (notebook_page_added_cb),
	(notebook_page_removed_cb), (notebook_page_reordered_cb),
	(impl_attach_window):
	* src/ephy-tabs-menu.c: (notebook_page_added_cb),
	(notebook_page_removed_cb), (notebook_page_reordered_cb),
	(ephy_tabs_menu_set_window):
	* src/ephy-window.c: (update_tabs_menu_sensitivity),
	(idle_tab_remove_cb), (notebook_page_added_cb),